--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -16,19 +16,21 @@ env:
 jobs:
 
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} --no-cache --force-rm .
 
   test:
+    name: Test
     runs-on: ubuntu-latest
     needs: [build]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Test the Docker image
         run: docker run -d ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
@@ -39,7 +41,7 @@ jobs:
 
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
