--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image to Docker Hub
+ame: Build and Push Docker Image to Docker Hub
 
 on:
   push:
@@ -71,4 +71,4 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          repository: ${{ env.IMAGE_NAME }}
